# MCHPRS-FPGA

crates/FPGA/: Cargo.toml
crates/FPGA/Quartus/: EBAB.sopcinfo  FPGA-MCHPRS.asm.rpt  FPGA-MCHPRS.done  FPGA-MCHPRS.fit.rpt  FPGA-MCHPRS.fit.summary  FPGA-MCHPRS.flow.rpt  FPGA-MCHPRS.jdi  FPGA-MCHPRS.map.rpt  FPGA-MCHPRS.map.summary  FPGA-MCHPRS.qpf  FPGA-MCHPRS.qws  FPGA-MCHPRS.sta.rpt  FPGA-MCHPRS.sta.summary  FPGA-MCHPRS.tcl  fclk.sip  fclk.spd  fclk.v  qmegawiz_errors_log.txt  ramtest.v  ramtest_bb.v
crates/FPGA/Quartus/.qsys_edit/: EBAB.xml
crates/FPGA/Quartus/EBAB/: EBAB.html  EBAB.xml  EBAB_inst.vhd
crates/FPGA/Quartus/Verilog/: components.v.bak  redstone.v  top.v  uart.v  uart.v.bak
crates/FPGA/Quartus/db/: .cmp.kpt  FPGA-MCHPRS.(0).cnf.cdb  FPGA-MCHPRS.(0).cnf.hdb  FPGA-MCHPRS.(1).cnf.cdb  FPGA-MCHPRS.(1).cnf.hdb  FPGA-MCHPRS.(10).cnf.cdb  FPGA-MCHPRS.(10).cnf.hdb  FPGA-MCHPRS.(11).cnf.cdb  FPGA-MCHPRS.(11).cnf.hdb  FPGA-MCHPRS.(2).cnf.cdb  FPGA-MCHPRS.(2).cnf.hdb  FPGA-MCHPRS.(4).cnf.cdb  FPGA-MCHPRS.(4).cnf.hdb  FPGA-MCHPRS.(5).cnf.hdb  FPGA-MCHPRS.(6).cnf.cdb  FPGA-MCHPRS.(7).cnf.cdb  FPGA-MCHPRS.(7).cnf.hdb  FPGA-MCHPRS.(8).cnf.cdb  FPGA-MCHPRS.(8).cnf.hdb  FPGA-MCHPRS.(9).cnf.cdb  FPGA-MCHPRS.(9).cnf.hdb  FPGA-MCHPRS.ace_cmp.bpm  FPGA-MCHPRS.ace_cmp.hdb  FPGA-MCHPRS.archive.qmsg  FPGA-MCHPRS.asm.qmsg  FPGA-MCHPRS.asm.rdb  FPGA-MCHPRS.cmp.bpm  FPGA-MCHPRS.cmp.cdb  FPGA-MCHPRS.cmp.hdb  FPGA-MCHPRS.cmp.idb  FPGA-MCHPRS.cmp.logdb  FPGA-MCHPRS.cmp.rdb  FPGA-MCHPRS.db_info  (+46 more)
crates/FPGA/src/: assembler.rs  graph.rs  lib.rs  mod.rs  serial.rs
(+517 files in other folders)
