[package]
name = "fpga_interface"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mchprs_blocks = { path = "../blocks" }
mchprs_world = { path = "../world" }
flate2 = "1.0.34"
fastnbt = "2"
serde = "1.0.214"
regex = "1.11.1"
serde_json = "1.0.132"